# FLIGHT

./: .gitignore  AirshopingRQ.json  AirshopingRQ.py  BOOKING_DATA_STORAGE_EXPLANATION.md  CONNECTION_STATUS.md  FLIGHT_PRICE_TRANSFORMATION_ANALYSIS.md  FlightPriceResponse.json  ITINERARY_FLOW_IMPLEMENTATION_SUMMARY.md  ITINERARY_IMPLEMENTATION_PLAN.md  MULTI_AIRLINE_IMPLEMENTATION_PLAN.md  OrderCreateRQ.json  OrderCreateRQ.py  OrderCreateRQ_generated.json  OrderCreateRs.json  OrdercreateRS.json  PRISMA_ERROR_FIX_AND_DATA_EXPLANATION.md  README.md  airshoping_response.json  bookings (1).json  build_flightpriceRQ.py  build_ordercreate_rq.py  dump.rdb  flightprice_request.json  flightprice_request_generated.json  log  logs  package-lock.json  penalty.md  seat and service.html  start_services.py  test_basic.ps1  test_bookings_api_fix.js  test_connection.py  test_full_integration.ps1  test_imports.py  test_integration.ps1  test_itinerary_flow.js  test_prisma_connection.js  test_results_validation_report.md  test_simple_integration.ps1  (+1 more)
Backend/: .cursorrules  .dockerignore  .gitignore  AIRLINE_CONSISTENCY_FIX_SUMMARY.md  AUTHENTICATION_AUDIT_REPORT.md  Dockerfile  MULTI_AIRLINE_IMPLEMENTATION_SUMMARY.md  MULTI_PTC_AGGREGATION_SUCCESS.md  OrderCreate_KQ_CardPayment_20250704_021344.json  Procfile  REDIS_CLOUD_SETUP.md  REDIS_DEPLOYMENT_GUIDE.md  ROUND_TRIP_FIX_VALIDATION.md  TOKEN_MANAGEMENT_FIXES.md  TOKEN_PERSISTENCE_GUIDE.md  __init__.py  actual_raw_response_payload.json  app.py  check_config.py  clear_cache.py  config.py  debug_airline_detection.py  debug_api_call.py  (+94 more)
(+604 files in other folders)
